--- a/document/MainMatter/Background.tex
+++ b/document/MainMatter/Background.tex
@@ -1,1 +1,51 @@
 \chapter{Estado del Arte}\label{chapter:state-of-the-art}
+
+La Ciencia de Datos es uno de los términos que más está presente cada vez que se habla sobre nuevas tecnologías y las herramientas más usadas en la actualidad. Según \cite{hayashi1998}, quien presentó por primera vez el concepto, la Ciencia de Datos pretende analizar y comprender los fenómenos reales con datos. En otras palabras, su objetivo es revelar las características o la estructura oculta de fenómenos naturales, humanos y sociales complicados con datos desde un punto de vista diferente de la teoría y métodos establecidos o tradicionales. 
+
+La Ciencia de Datos combina múltiples campos para lograr el cumplimiento de su más crucial objetivo, que es la extracción de conocimiento de los datos, entre los que se incluyen métodos científicos, estadísticos, análisis de datos y modelos de la inteligencia artificial. Sus aplicaciones más comunes incluyen el modelado predictivo, el reconocimiento de patrones, la detección de anomalías, la clasificación, la categorización y el análisis de sentimientos, así como el desarrollo de tecnologías como motores de recomendación, sistemas de personalización y herramientas de inteligencia artificial.
+
+Dentro del sector deportivo, el análisis de datos se ha convertido en una herramienta altamente poderosa y muy utilizada en la industria. La accesibilidad de los datos en forma de resultados generados en los distintos eventos deportivos en un año específico permite el análisis de actuaciones en cualquier número de eventos deportivos. A partir de los análisis de estos resultados se pueden observar cambios en el rendimiento de los deportistas a lo largo del tiempo y se pueden hacer predicciones de rendimiento futuro utilizando modelos matemáticos. 
+
+\section{Ciencia de datos en importantes eventos deportivos}
+
+Varios autores han dedicado parte de su trabajo a estudiar y pronosticar los posibles resultados de cada país en importantes eventos como los Juegos Olímpicos y el Campeonato Mundial de Atletismo.
+
+Unos de los primeros investigadores en abordar este tema son Kuper y Sterken, que proporcionan una metodología para la obtención de los pronósticos de medallas y la participación en los Juegos Olímpicos tanto de Invierno \cite{kuper2001olympic} como de Verano \cite{kuperolympicgerard}, presentando resultados separados para eventos antes y después de la Segunda Guerra Mundial. Su enfoque principal es el impacto de los determinantes económicos, geográficos y demográficos de la participación y el éxito olímpico. Su método consiste en estimar primero la participación y luego modelar el rendimiento olímpico en términos de reparto de medallas de oro, plata y bronce, condicionado a la participación; teniendo en cuanta además variables para representar si es o no el país anfitrión, el ingreso per cápita y la clasificación de algunos países según sus sistemas legales.
+
+\cite{johnson2004tale} también en su búsqueda por determinar las influencias estructurales de la participación y el éxito de un país en los Juegos Olímpicos, llegan a la existencia de una ventaja de participación significativa y medible para las naciones más grandes y de mayores ingresos, aunque los ingresos son más importantes en el invierno y la población es más importante en el verano. Entre las naciones participantes, las naciones de altos ingresos siempre se desempeñan muy bien en el recuento de medallas, aunque los efectos son más pronunciados en el verano debido a la diferencia en el grupo de participantes. Curiosamente, las naciones pequeñas superan a sus competidores más grandes en los Juegos de Invierno, mientras que lo contrario es definitivamente cierto en los Juegos de Verano. 
+
+Como se demostró en los artículos anteriores, las características demográficas y económicas brindan un poder predictivo importante para determinar el éxito de un país en los Juegos Olímpicos. \cite{bernard2004wins} y \cite{pfau2006predicting} amplían dicha investigación haciendo uso de métodos de la economía y la econometría, con el fin de demostrar el poder de un modelo econométrico simple. \cite{bernard2004wins} hacen uso de una función de producción Cobb-Douglas para representar a la población y al ingreso nacional en la producción de talento olímpico (la cantidad de atletas que se presentan en la competencia) por país y de una función logarítmica para la traducción de este talento relativo en la cantidad de medallas ganadas. \cite{pfau2006predicting} se basa en el estudio anterior y lo extiende añadiendo variables propuestas por otros autores mencionados anteriormente, llegando a construir un modelo más completo. 
+
+En \cite{schlembach2020forecasting}, se ataca dicho problema desde una perspectiva más moderna haciendo uso de machine learning para aumentar significativamente la precisión del pronóstico de medallas olímpicas. Su modelo consiste en un Random Forest de dos etapas, superando el método de pronóstico naïve más tradicional para tres Juegos Olímpicos anteriores celebrados entre 2008 y 2016 por primera vez.
+
+\section{Ciencia de datos en el atletismo}
+
+Durante la preparación y entrenamiento de los atletas en disciplinas como el atletismo, es frecuente que los entrenadores se interesen por predecir su rendimiento. Con este fin, numerosos científicos han desarrollado modelos matemáticos, estadísticos y de inteligencia artificial que logran describir el efecto de varios factores en el rendimiento de los atletas, logrando predecir incluso resultados futuros. 
+
+\subsection{Modelos matemáticos}
+
+La modelación matemática es definida por \cite{anhalt2018mathematical} como el proceso de seleccionar y utilizar las matemáticas a través de una simplificación de la realidad que se expresa en un lenguaje simbólico tomando la forma de ecuaciones, algoritmos y relaciones gráficas. Algunos han utilizado modelos lineales para trazar y predecir el cambio del rendimiento de los atletas, mientras que otros han utilizado métodos de estimación de curvas múltiples basados en funciones inversas, sigmoides, cuadráticas, cúbicas, compuestas, logísticas, de crecimiento y exponenciales.
+
+\cite{hill1925physiological} y \cite{keller1973theory} se centran en los corredores de distancia y desarrollan modelos basados en el metabolismo para proporcionar una explicación fisiológica de la relación tiempo-distancia y predecir el rendimiento récord. En el caso de \cite{hill1925physiological} se trata de responder a la interrogante “¿Qué tan rápido puede correr un atleta una cierta distancia?”, teniendo en cuenta el factor fatiga. Mientras que, por otro lado, \cite{keller1973theory} ajusta la curva teórica a cuatro registros observados: la fuerza máxima que puede ejercer un corredor, la fuerza resistiva que se opone al corredor, la velocidad a la que el metabolismo del oxígeno suministra energía y la cantidad inicial de energía almacenada en el cuerpo del corredor al comienzo de la carrera. 
+
+En \cite{grubb1998models} para determinar las fortalezas de un atleta y evaluar el efecto del entrenamiento, proponen una forma paramétrica que caracteriza el cambio del rendimiento de los corredores con la distancia. Ellos definen el rendimiento como la velocidad promedio para cada distancia, lo cual permite hacer análisis que ayuden a predecir rendimientos futuros.
+
+\cite{heazlewood2006prediction} hace uso de ecuaciones matemáticas que dependen de los tiempos obtenidos y las distancias reales logrados por los atletas para la predicción de eventos atléticos de 100 m, 400 m, salto de longitud y salto de altura masculino y femenino. Para investigar las hipótesis de ajuste y predicción del modelo, once modelos de regresión se aplicaron individualmente a cada uno de los eventos atléticos y de natación. La ecuación de regresión que produjo el mejor ajuste para cada evento, es decir, produjo el coeficiente de determinación más alto (R2), fue finalmente la escogida. Tanto para los 100 m masculinos como para el salto largo femenino escogieron una función inversa, para los 100 m femeninos y el salto largo masculino una función cúbica, una función sigmoide para los 400 m tanto masculinos como femeninos y para el caso del salto alto, dieron iguales resultados la función exponencial, de crecimiento, compuesta y logística.  
+
+Los límites naturales están siendo desafiados, principalmente en los eventos de larga distancia, por lo que hay varios artículos que se centran en responder ciertas interrogantes como “¿Se están acercando los atletas al límite del rendimiento humano?” y “¿Las mujeres atletas superarán a los hombres?”. Uno de ellos es \cite{kumarforecasting}, donde para obtener respuestas a esas consultas analiza datos relacionados con la carrera y la natación de hombres y mujeres con la ayuda de dos modelos matemáticos bien conocidos: el modelo logístico y el modelo Gompertz.
+
+\cite{joyner2008endurance} realiza una revisión de los factores que interactúan en los deportes de resistencia y su utilidad como predictores del rendimiento de elite. Los factores que marcan como principales son: el consumo máximo de oxígeno (VO2, máx.), el llamado "umbral de lactato" y la eficiencia (el costo de oxígeno para generar una velocidad de carrera dada o una producción de potencia de ciclismo); que parecen desempeñar un papel clave en el rendimiento de resistencia.
+
+\cite{westera2011phenomenology} presenta un Modelo Predictor Personal para las carreras de velocidad, el cual solo utiliza dos marcas personales de un atleta para la calibración y permite luego predecir las marcas personales hipotéticas de un atleta para cualquier otra distancia.
+
+En \cite{galvanmathematical} se proponen diferentes modelos matemáticos para algunos eventos del atletismo. Se crearon cinco ecuaciones a partir de los datos reales: una ecuación polinómica de quinto orden para el maratón masculino, una ecuación polinomial de quinto orden para el maratón femenino, una ecuación polinomial de segundo orden para la marcha masculina de 20 km, una ecuación de potencia para la marcha de 20 km de mujeres, y una ecuación polinomial de segundo orden para la marcha de 50 km de hombres.
+
+\subsection{Modelos basados en datos}
+
+La relación entre un modelo matemático y la realidad tiene fuertes implicaciones en cuanto a la percepción del mundo y las interpretaciones de los resultados por los científicos, por lo que pronosticar el éxito depende de seleccionar un método apropiado y altamente preciso. Es por esto que varios autores han incursionado en otras vías de estudio para la predicción: modelos basados en datos. Con los modelos basados en datos no es necesario determinar de antemano la expresión matemática que va a representar el modelo de predicción de rendimiento único de un atleta; sino, por el contrario, se trata de hacer uso de herramientas que aprendan por si solas la mejor vía para representar los datos.
+
+\cite{godsey2012brian} no se enfoca en la predicción de las marcas futuras de un atleta en específico, sino en predecir la calificación máxima esperada en un evento determinado y tanto la probabilidad de que se supere una marca específica como el número esperado de dichas actuaciones en un período de tiempo determinado. Proponen un algoritmo sencillo y basado en modelos para asignar puntuaciones a actuaciones deportivas, las cuales se basan en el número esperado de atletas que se desempeñan mejor que una marca dada dentro de un año calendario. Para esto, de forma general, estiman una distribución logarítmica normal para cada evento deportivo $k$ usando una lista de las mejores $n_k$ marcas de ese evento y asumen que los logaritmos naturales de los rendimientos de cada evento se distribuyen normalmente.
+
+Las herramientas de Inteligencia Artificial también han proporcionado muy buenos resultados a la hora de predecir rendimientos futuros. \cite{blythe2016prediction} tratan de proponer un modelo que explique simultáneamente la fisiología individual y el rendimiento colectivo de los corredores. Su enfoque basa las predicciones en Local Matrix Completion (LMC), una técnica de aprendizaje automático que postula la existencia de un pequeño número de variables explicativas que describen el rendimiento de los corredores individuales. En su estudio, descubren que un resumen de tres números para cada individuo explica el rendimiento en toda la gama de distancias, desde los 100 m hasta el maratón. El resumen de tres números se relaciona con: la resistencia de un corredor, el equilibrio relativo entre velocidad y resistencia, y la especialización en distancias medias.
+
+\cite{zhou2022sports} propone un método para predecir con precisión el rendimiento deportivo basado en Redes Neuronales Profundas, el cual se basa en una relación funcional entre el rendimiento deportivo de los atletas y sus indicadores de entrenamiento: índices de forma corporal, función, calidad básica y calidad especial.
