--- a/document/Thesis.tex
+++ b/document/Thesis.tex
@@ -49,10 +49,10 @@
 
 \lstset{style=mystyle}
 
-\title{Título de la tesis}
-\author{\\\vspace{0.25cm}Nombre del autor}
-\advisor{\\\vspace{0.25cm}Nombre del primer tutor\\\vspace{0.2cm}Nombre del segundo tutor}
-\degree{Licenciado en (Matemática o Ciencia de la Computación)}
+\title{Sistema para la Predicción de los Pronósticos del Mundial de Atletismo}
+\author{\\\vspace{0.25cm}Karla Olivera Hernández}
+\advisor{\\\vspace{0.25cm}Dr. Yudivián Almeida Cruz}
+\degree{Licenciado en Ciencia de la Computación}
 \faculty{Facultad de Matemática y Computación}
 \date{Fecha\\\vspace{0.25cm}\href{https://github.com/username/repo}{github.com/username/repo}}
 \logo{Graphics/uhlogo}
