Add final version

--- a/document/BackMatter/Conclusions.tex
+++ b/document/BackMatter/Conclusions.tex
@@ -1,3 +1,15 @@
 \begin{conclusions}
-    Conclusiones
+
+El presente trabajo expuso la necesidad de contar con sistemas de predicción en el mundo del deporte y en especial del atletismo. Luego de un análisis de las principales investigaciones que se han abordado relacionadas con el tema, se propuso una metodología que permite predecir la posición que ocuparán los atletas en el ranking final de la mayoría de las disciplinas que conforman una competencia de atletismo, exceptuando las carreras de relevo. 
+
+La propuesta se basó en la realización de simulaciones de la competencia, donde se hace uso de funciones de distribución de probabilidad para modelar las marcas que pueden obtener los atletas. El modelo propuesto utiliza un conjunto de parámetros que inciden directamente en la calidad de los resultados. Por eso, también se realizó un proceso de optimización de parámetros contra dos métricas encargadas de calcular el error de un ranking predicho contra el real. Las disciplinas de relevo  
+
+Se implementó un prototipo que presentó una primera aproximación de la metodología y permitió comprobar su viabilidad. Para las pruebas se tomaron los resultados del Campeonato Mundial de Atletismo Doha 2019 para obtener el conjunto de parámetros óptimos. Con estos valores, se obtuvieron las predicciones tanto del certamen de atletismo de los Juegos Olímpicos Tokio 2020 como del Campeonato Mundial de Atletismo Oregón 2022. Estos resultados a su vez fueron comparados con dos modelos, uno para cada competencia, cuyos parámetros fueron escogidos por un experto.
+
+A pesar de las sorpresas que ocurren en cualquier competencia deportiva, para el caso del Campeonato Mundial de Atletismo Oregón 2022, la predicción obtenida se consideró bastante buena. Se predijo correctamente al 69 \% de los 336 atletas ubicados entre los primeros ocho en cada uno de los eventos estudiados, de ellos el 61 \% de los 126 medallistas, con 39 ubicados en su posición exacta y se acertó en 22 campeones. 
+
+Para los Juegos Olímpicos de Tokio, evento celebrado en plena pandemia, los resultados fueron menos certeros. Se predijo el 53 \% de los atletas ubicados en las primeras ocho posiciones, el 53 \% de los medallistas con 26 ubicados en su posición exacta y 12 campeones.
+
+El modelo de predicción propuesto aún tiene mucho margen de mejora, lo que lo convierte en una herramienta interesante de estudiar. Distintos parámetros pueden ser modificados en futuras aproximaciones en busca de predicciones más certeras.
+
 \end{conclusions}
