--- a/document/BackMatter/Recomendations.tex
+++ b/document/BackMatter/Recomendations.tex
@@ -1,3 +1,13 @@
 \begin{recomendations}
-    Recomendaciones
+
+Una vez fue comprobada la viabilidad de la metodología de predicción a partir de un análisis de los resultados obtenidos, se identifican nuevas líneas de investigación que pueden llegar a mejorar la efectividad de la propuesta.
+
+\begin{itemize}
+    \item Proponer un modelo de predicción para las disciplinas de relevo, de esta forma se puede incluir en la metodología y lograr realizar predicciones completas de una competencia de atletismo.
+    \item Agregar una mayor cantidad de competencias durante el proceso de optimización, puesto que siempre pueden ocurrir sucesos inesperados como la lesión de atletas destacados y, en este caso, los resultados pueden verse afectados.
+    \item Añadir al proceso de optimización el parámetro que representa la cantidad de años que se tomarán como referencia con el fin de obtener las marcas de los atletas. En esta investigación fue fijado a tres, pero quizás exista algún otro valor que se adapte mejor a las predicciones.
+    \item Construir un sistema que utilice la metodología de predicción y sea capaz de publicar sistemáticamente los resultados y optimizar los valores de los parámetros con el tiempo.
+    \item Por último, adaptar y probar el modelo de predicción en otras modalidades deportivas basadas en marcas como la natación y el ciclismo. De esta forma se comprueba la viabilidad de la metodología en diferentes escenarios para probar su efectividad.
+\end{itemize}
+    
 \end{recomendations}
