--- a/document/Bibliography.bib
+++ b/document/Bibliography.bib
@@ -132,6 +132,12 @@
   pages={407}
 }
 
+@article{mishra2013mathematical,
+  title={Mathematical Modeling Approach to Predict Athletic Time, Performance},
+  author={Mishra, RK and Kaur, Simaranjeet},
+  year={2013}
+}
+
 @article{joyner2008endurance,
   title={Endurance exercise performance: the physiology of champions},
   author={Joyner, Michael J and Coyle, Edward F},
@@ -189,11 +195,6 @@
   publisher={Hindawi}
 }
 
-
-
-
-
-
 @phdthesis{burke2016kernel,
   title={Kernel Density Estimation Techniques for Monte Carlo Reactor Analysis.},
   author={Burke, Timothy},
@@ -210,122 +211,300 @@
   organization={EDP Sciences}
 }
 
-@article{rudemo1982empirical,
-  title={Empirical choice of histograms and kernel density estimators},
-  author={Rudemo, Mats},
-  journal={Scandinavian Journal of Statistics},
-  pages={65--78},
-  year={1982},
-  publisher={JSTOR}
+@inproceedings{hutter2011sequential,
+  title={Sequential model-based optimization for general algorithm configuration},
+  author={Hutter, Frank and Hoos, Holger H and Leyton-Brown, Kevin},
+  booktitle={International conference on learning and intelligent optimization},
+  pages={507--523},
+  year={2011},
+  organization={Springer}
 }
 
-@article{bowman1984alternative,
-  title={An alternative method of cross-validation for the smoothing of density estimates},
-  author={Bowman, Adrian W},
-  journal={Biometrika},
-  volume={71},
+@article{watson2022improved,
+  title={Improved quantitative prediction of power outages caused by extreme weather events},
+  author={Watson, Peter L and Spaulding, Aaron and Koukoula, Marika and Anagnostou, Emmanouil},
+  journal={Weather and Climate Extremes},
+  volume={37},
+  pages={100487},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{powers2007numerical,
+  title={Numerical prediction of an Antarctic severe wind event with the Weather Research and Forecasting (WRF) model},
+  author={Powers, Jordan G},
+  journal={Monthly Weather Review},
+  volume={135},
+  number={9},
+  pages={3134--3157},
+  year={2007}
+}
+
+@article{morris2010measuring,
+  title={Measuring and forecasting financial stability: The composition of an aggregate financial stability index for Jamaica},
+  author={Morris, Verlis C},
+  journal={Bank of Jamaica},
+  volume={6},
   number={2},
-  pages={353--360},
-  year={1984},
-  publisher={Oxford University Press}
+  pages={34--51},
+  year={2010}
 }
 
-@article{hall1987extent,
-  title={Extent to which least-squares cross-validation minimises integrated square error in nonparametric density estimation},
-  author={Hall, Peter and Marron, James Stephen},
-  journal={Probability Theory and Related Fields},
-  volume={74},
+@article{gilardoni2017recurrent,
+  title={Recurrent neural network models for financial distress prediction},
+  author={Gilardoni, Grazia},
+  year={2017},
+  publisher={Italy}
+}
+
+@article{bohte2019comparing,
+  title={Comparing the forecasting of cryptocurrencies by bayesian time-varying volatility models},
+  author={Bohte, Rick and Rossini, Luca},
+  journal={Journal of Risk and Financial Management},
+  volume={12},
+  number={3},
+  pages={150},
+  year={2019},
+  publisher={MDPI}
+}
+
+@article{vaz2012forecasting,
+  title={Forecasting in the NBA and other team sports: Network effects in action},
+  author={Vaz de Melo, Pedro OS and Almeida, Virgilio AF and Loureiro, Antonio AF and Faloutsos, Christos},
+  journal={ACM Transactions on Knowledge Discovery from Data (TKDD)},
+  volume={6},
+  number={3},
+  pages={1--27},
+  year={2012},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{constantinou2012pi,
+  title={pi-football: A Bayesian network model for forecasting Association Football match outcomes},
+  author={Constantinou, Anthony C and Fenton, Norman E and Neil, Martin},
+  journal={Knowledge-Based Systems},
+  volume={36},
+  pages={322--339},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@misc{gracenote, 
+  title={Virtual medal table}, 
+  url={https://www.gracenote.com/virtual-medal-table/}, 
+  journal={Gracenote},
+  year={2022},
+  month={11}
+} 
+
+@misc{bestsports, 
+  title={Best Sports Database}, 
+  url={https://bestsports.com.br/}, 
+  journal={BEST sports},
+  year={2022},
+  month={11}
+} 
+
+@misc{python,
+  author={Python},
+  url={https://www.python.org/},
+  title={Python}, 
+  year={2022},
+  month={11}
+} 
+
+@misc{pandas,
+  author={Pandas},
+  url={https://pypi.org/project/pandas/},
+  title={Pandas}, 
+  year={2022},
+  month={11}
+} 
+
+@misc{numpy,
+  author={Numpy},
+  url={https://numpy.org/doc/stable/},
+  title={Numpy}, 
+  year={2022},
+  month={11}
+} 
+
+@misc{sklearn,
+  author={Scikit learn},
+  url={https://scikit-learn.org/stable/getting_started.html},
+  title={Scikit-learn}, 
+  year={2022},
+  month={11}
+} 
+
+@misc{kerneldensity,
+  author={KernelDensity},
+  url={https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KernelDensity.html},
+  title={KernelDensity}, 
+  year={2022},
+  month={11}
+} 
+
+@article{lindauer2022smac3,
+  title={SMAC3: A Versatile Bayesian Optimization Package for Hyperparameter Optimization.},
+  author={Lindauer, Marius and Eggensperger, Katharina and Feurer, Matthias and Biedenkapp, Andr{\'e} and Deng, Difan and Benjamins, Carolin and Ruhkopf, Tim and Sass, Ren{\'e} and Hutter, Frank},
+  journal={J. Mach. Learn. Res.},
+  volume={23},
+  pages={54--1},
+  year={2022}
+}
+
+@misc{configspace,
+  author={ConfigSpace},
+  url={https://automl.github.io/ConfigSpace/main/},
+  title={ConfigSpace}, 
+  year={2022},
+  month={11}
+} 
+
+@misc{smac,
+  author={SMAC3},
+  url={https://automl.github.io/SMAC3/main/index.html},
+  title={SMAC3}, 
+  year={2022},
+  month={11}
+} 
+
+@misc{colab,
+  author={Research Google},
+  url={https://research.google.com/colaboratory/intl/es/faq.html},
+  title={Colaboratory}, 
+  year={2022},
+  month={11}
+} 
+
+@misc{wired,
+  author={Wired},
+  url={https://www.wired.com/2008/08/bolt-is-freaky/},
+  title={Bolt is freaky}, 
+  year={2022},
+  month={11}
+} 
+
+@misc{tokio2020,
+  author={Yudivian Almeida y grupo de Inteligencia Artificial, Universidad de la Habana},
+  url={http://www.postdata.club/predicciones_tokio_2021/index.html},
+  title={Pronosticos Tokio 2020}, 
+  year={2022},
+  month={11}
+} 
+
+@inproceedings{jia2020random,
+  title={A Random Forest Regression Model Predicting the Winners of Summer Olympic Events},
+  author={Jia, Mengjie and Zhao, Yue and Chang, Furong and Zhang, Bofeng and Yoshigoe, Kenji},
+  booktitle={Proceedings of the 2020 2nd International Conference on Big Data Engineering},
+  pages={62--69},
+  year={2020}
+}
+
+@inproceedings{inproceedings,
+  author = {Krutikov, A.K and Meltsov, Vasily and Podkovyrin, Vitaliy},
+  year = {2019},
+  month = {01},
+  pages = {},
+  title = {Neural Network of Vector Quantization as a Tool for Predicting Sports Achievements in Individual and Team Sports},
+  doi = {10.2991/aebmr.k.200114.190}
+}
+
+@article{girardi2022performance,
+  title={Performance prediction, pacing profile and running pattern of elite 1-h track running events},
+  author={Girardi, Michele and Gattoni, Chiara and Sponza, Luca and Marcora, Samuele Maria and Micklewright, Dominic},
+  journal={Sport Sciences for Health},
+  volume={18},
   number={4},
-  pages={567--581},
-  year={1987},
+  pages={1457--1474},
+  year={2022},
   publisher={Springer}
 }
 
-@article{loader1999bandwidth,
-  title={Bandwidth selection: classical or plug-in?},
-  author={Loader, Clive R},
-  journal={The Annals of Statistics},
-  volume={27},
-  number={2},
-  pages={415--438},
-  year={1999},
-  publisher={Institute of Mathematical Statistics}
+@article{mulligan2018minimal,
+  title={A minimal power model for human running performance},
+  author={Mulligan, Matthew and Adam, Guillaume and Emig, Thorsten},
+  journal={PloS one},
+  volume={13},
+  number={11},
+  pages={e0206645},
+  year={2018},
+  publisher={Public Library of Science San Francisco, CA USA}
 }
 
-@article{woodroofe1970choosing,
-  title={On choosing a delta-sequence},
-  author={Woodroofe, Michael},
-  journal={The Annals of Mathematical Statistics},
-  volume={41},
-  number={5},
-  pages={1665--1671},
-  year={1970},
-  publisher={JSTOR}
+@mastersthesis{vazquez2014combining,
+  title={Combining clustering and time series for baseball forecasting},
+  author={V{\'a}zquez Fern{\'a}ndez de Lezeta, Miguel and others},
+  type={{B.S.} thesis},
+  year={2014}
 }
 
-@article{hall1980objective,
-  title={Objective methods for the estimation of window size in the nonparametric estimation of a density},
-  author={Hall, P},
-  journal={Unpublished manuscript},
-  year={1980}
-}
-
-@article{sheather1983data,
-  title={A data-based algorithm for choosing the window width when estimating the density at a point},
-  author={Sheather, Simon},
-  journal={Computational Statistics \& Data Analysis},
-  volume={1},
-  pages={229--238},
-  year={1983},
-  publisher={Elsevier}
-}
-
-@article{sheather1986improved,
-  title={An improved data-based algorithm for choosing the window width when estimating the density at a point},
-  author={Sheather, Simon J},
-  journal={Computational Statistics \& Data Analysis},
-  volume={4},
+@article{piza2005futbol,
+  title={F{\'u}tbol y matem{\'a}tica: modelo de simulaci{\'o}n de Monte-Carlo},
+  author={Piza Volio, Eduardo},
+  journal={Acta Nova},
+  volume={3},
   number={1},
-  pages={61--65},
-  year={1986},
-  publisher={Elsevier}
+  pages={16--28},
+  year={2005},
+  publisher={Universidad Cat{\'o}lica Boliviana}
 }
 
-@article{scott1987biased,
-  title={Biased and unbiased cross-validation in density estimation},
-  author={Scott, David W and Terrell, George R},
-  journal={Journal of the american Statistical association},
-  volume={82},
-  number={400},
-  pages={1131--1146},
-  year={1987},
-  publisher={Taylor \& Francis}
+@inproceedings{yue2014learning,
+  title={Learning fine-grained spatial models for dynamic sports play prediction},
+  author={Yue, Yisong and Lucey, Patrick and Carr, Peter and Bialkowski, Alina and Matthews, Iain},
+  booktitle={2014 IEEE international conference on data mining},
+  pages={670--679},
+  year={2014},
+  organization={IEEE}
 }
 
-@article{marron1987partitioned,
-  title={Partitioned cross-validation},
-  author={Marron, James Stephen},
-  journal={Econometric Reviews},
+@article{thabtah2019nba,
+  title={NBA game result prediction using feature analysis and machine learning},
+  author={Thabtah, Fadi and Zhang, Li and Abdelhamid, Neda},
+  journal={Annals of Data Science},
   volume={6},
-  number={2},
-  pages={271--283},
-  year={1987},
-  publisher={Taylor \& Francis}
+  number={1},
+  pages={103--116},
+  year={2019},
+  publisher={Springer}
 }
 
-@inproceedings {lindauer-arxiv21a,
-  author = {Marius Lindauer and Katharina Eggensperger and Matthias Feurer and André Biedenkapp and Difan Deng and Carolin Benjamins and Tim Ruhkopf and René Sass and Frank Hutter},
-  title = {SMAC3: A Versatile Bayesian Optimization Package for Hyperparameter Optimization},
-  booktitle = {ArXiv: 2109.09831},
-  year = {2021},
-  url = {https://arxiv.org/abs/2109.09831}
+@article{holub2021predicting,
+  title={Predicting breaststroke and butterfly stroke results in swimming based on Olympics history},
+  author={Ho{\l}ub, Maciej and Stanula, Arkadiusz and Baron, Jakub and G{\l}yk, Wojciech and Rosemann, Thomas and Knechtle, Beat},
+  journal={International journal of environmental research and public health},
+  volume={18},
+  number={12},
+  pages={6621},
+  year={2021},
+  publisher={MDPI}
 }
 
-@article{estevez2020general,
-  title={General-purpose hierarchical optimisation of machine learning pipelines with grammatical evolution},
-  author={Est{\'e}vez-Velarde, Suilan and Guti{\'e}rrez, Yoan and Almeida-Cruz, Yudivi{\'a}n and Montoyo, Andr{\'e}s},
-  journal={Information Sciences},
-  year={2020},
-  publisher={Elsevier},
-  doi={10.1016/j.ins.2020.07.035}
+@article{kholkine2021learn,
+  title={A Learn-to-Rank Approach for Predicting Road Cycling Race Outcomes},
+  author={Kholkine, Leonid and Servotte, Thomas and De Leeuw, Arie-Willem and De Schepper, Tom and Hellinckx, Peter and Verdonck, Tim and Latr{\'e}, Steven},
+  journal={Frontiers in sports and active living},
+  volume={3},
+  year={2021},
+  publisher={Frontiers Media SA}
+}
+
+@article{liu2022construction,
+  title={Construction of Women's All-Around Speed Skating Event Performance Prediction Model and Competition Strategy Analysis Based on Machine Learning Algorithms},
+  author={Liu, Meng and Chen, Yan and Guo, Zhenxiang and Zhou, Kaixiang and Zhou, Limingfei and Liu, Haoyang and Bao, Dapeng and Zhou, Junhong},
+  journal={Frontiers in psychology},
+  volume={13},
+  year={2022},
+  publisher={Frontiers Media SA}
+}
+
+@article{rosenblatt1956remarks,
+  title={Remarks on some nonparametric estimates of a density function},
+  author={Rosenblatt, Murray},
+  journal={The annals of mathematical statistics},
+  pages={832--837},
+  year={1956},
+  publisher={JSTOR}
 }
