--- a/document/FrontMatter/Abstract.tex
+++ b/document/FrontMatter/Abstract.tex
@@ -1,7 +1,11 @@
 \begin{resumen}
-	Resumen en español
+
+	El seguimiento del progreso y las tendencias en algunos deportes permite predecir la dirección en la que se dirige cada disciplina. El presente trabajo se centra en el atletismo y estudia diferentes técnicas para la predicción de los resultados de las modalidades que conforman una determinada competencia. Esto constituye una información muy valiosa tanto para los entrenadores como para los mismos atletas, que buscan lograr actuaciones de alto nivel en los principales eventos internacionales. Particularmente, conocer la posición más probable que ocuparán los atletas en el ranking final puede proporcionar una idea de cuanto se debe reforzar el entrenamiento. Definir una técnica o modelo para realizar estos pronósticos con un rendimiento eficiente y con resultados cercanos a la realidad es una actividad desafiante y compleja, debido a que ninguno es preciso en todos los escenarios. Este trabajo trata de abordar el tema desde una perspectiva diferente. Se presenta una metodología que consiste en la realización de simulaciones de la competencia, donde se hace uso de funciones de distribución de probabilidad para modelar las marcas que pueden obtener los atletas. Este modelo depende de un conjunto de parámetros que influyen directamente en la calidad de los resultados. Es por esto que se propone una técnica de optimización de estos parámetros. Por último, se detallan los aspectos de implementación del prototipo y se evalúan los resultados contra el Campeonato Mundial de Atletismo celebrado en Oregón en el 2022.
+	
 \end{resumen}
 
 \begin{abstract}
-	Resumen en inglés
+
+	Tracking progress and trends in some sports makes it possible to predict the direction in which each discipline is headed. This paper focuses on athletics and studies different techniques for predicting the results of the modalities that make up a certain competition. This constitutes very valuable information for both coaches and the athletes themselves, who seek to achieve high-level performances in major international events. In particular, knowing the most likely position that athletes will occupy in the final ranking can provide an idea of how much training should be reinforced. Defining a technique or model to perform these forecasts with efficient performance and with results close to reality is a challenging and complex activity, since none is accurate in all scenarios. This paper tries to address the issue from a different perspective. A methodology is presented that consists in carrying out simulations of the competition, where probability distribution functions are used to model the marks that athletes can obtain. This model depends on a set of parameters that directly influence the quality of the results. For this reason, an optimization technique for these parameters is proposed. Finally, the implementation aspects of the prototype are detailed and the results are evaluated against the World Athletics Championships held in Oregon in 2022.
+
 \end{abstract}
