--- a/document/FrontMatter/SupervisorOpinion.tex
+++ b/document/FrontMatter/SupervisorOpinion.tex
@@ -1,3 +1,16 @@
 \begin{opinion}
-    Opiniones de los tutores
+    
+    La estudiante Karla Olivera Hernández desarrolló satisfactoriamente el trabajo de diploma titulado “Sistema para la Predicción de los Pronósticos del Mundial de Atletismo”. En este trabajo la estudiante propuso una metodología para predecir, en base a marcas previas de los atletas, los resultados de los eventos que conformen una determinada competencia de atletismo.
+
+    La propuesta que desarrolló la estudiante se basa en la realización de simulaciones de la competencia donde las marcas que pueda realizar cada atleta se modelan con funciones de distribución de probabilidad, en particular utiliza la Estimación de Densidad de Kernel. Este modelo que propone utiliza un conjunto de parámetros y los resultados que se obtienen están en función de ello. Por eso, para su propuesta, también realiza un proceso de optimización de parámetros contra dos propuestas de funciones a optimizar. Para verificar la viabilidad de su propuesta realiza un conjunto de experimentos. Toma los resultados del mundial de Doha para obtener los parámetros óptimos según el proceso de optimización de parámetros y con esto obtiene las predicciones tanto para los Juegos Olímpicos de Tokio como para el Mundial de Oregón. Estos resultados, a su vez, son comparados con dos modelos parametrizados manualmente que fueron confeccionados previamente para estas dos competencias.
+    
+    Para poder afrontar el trabajo, la estudiante tuvo que revisar literatura científica relacionada con la temática así como soluciones existentes y bibliotecas de software que pueden ser apropiadas para su utilización. Todo ello con sentido crítico, determinando las mejores aproximaciones y también las dificultades que presentan.
+    
+    Todo el trabajo fue realizado por el estudiante con una elevada constancia, capacidad de trabajo y habilidades, tanto de gestión, como de desarrollo y de investigación.
+    
+    Por estas razones pedimos que le sea otorgada a la estudiante Karla Olivera Hernández la máxima calificación y, de esta manera, pueda obtener el título de Licenciado en Ciencia de la Computación.
+    \BlankLine
+    \BlankLine
+    Dr. Yudivián Almeida Cruz
+
 \end{opinion}
