--- a/document/FrontMatter/Thanks.tex
+++ b/document/FrontMatter/Thanks.tex
@@ -1,3 +1,15 @@
 \begin{acknowledgements}
-    Agradecimientos
+    
+    A mis padres, por su paciencia y apoyo incondicional.
+
+    A mis abuelos, por enseñarme a dar siempre lo mejor de mí.
+    
+    A Ale, por siempre estar ahí.
+    
+    A Amanda, por acompañarme durante estos años y hacer más livianos los momentos de sufrimiento.
+    
+    A mis compañeros Victor, Gabi, Luiso, Claudia y todos los que luchamos juntos por estar aquí hoy.
+    
+    A mis profesores, por ser fuente de inspiración y enseñarnos desde el día uno a amar la carrera. En especial a mi tutor Yudivián, por el apoyo y dedicación brindado hasta el último momento.
+
 \end{acknowledgements}
