--- a/document/MainMatter/Background.tex
+++ b/document/MainMatter/Background.tex
@@ -1,51 +1,73 @@
 \chapter{Estado del Arte}\label{chapter:state-of-the-art}
 
-La Ciencia de Datos es uno de los términos que más está presente cada vez que se habla sobre nuevas tecnologías y las herramientas más usadas en la actualidad. Según \cite{hayashi1998}, quien presentó por primera vez el concepto, la Ciencia de Datos pretende analizar y comprender los fenómenos reales con datos. En otras palabras, su objetivo es revelar las características o la estructura oculta de fenómenos naturales, humanos y sociales complicados con datos desde un punto de vista diferente de la teoría y métodos establecidos o tradicionales. 
+La Ciencia de Datos es uno de los términos que más está presente cada vez que se habla sobre las nuevas tecnologías y las herramientas de análisis más usadas en la actualidad. Hayashi en 1998 \cite{hayashi1998} define el concepto de Ciencia de Datos como el campo de estudio que pretende analizar y comprender los fenómenos reales con datos. En otras palabras, su objetivo es revelar las características o la estructura oculta de aquellos fenómenos naturales, humanos y sociales complicados a través de los datos, desde un punto de vista diferente de la teoría y métodos tradicionales. 
 
-La Ciencia de Datos combina múltiples campos para lograr el cumplimiento de su más crucial objetivo, que es la extracción de conocimiento de los datos, entre los que se incluyen métodos científicos, estadísticos, análisis de datos y modelos de la inteligencia artificial. Sus aplicaciones más comunes incluyen el modelado predictivo, el reconocimiento de patrones, la detección de anomalías, la clasificación, la categorización y el análisis de sentimientos, así como el desarrollo de tecnologías como motores de recomendación, sistemas de personalización y herramientas de inteligencia artificial.
+En esencia, la Ciencia de Datos combina múltiples campos para lograr el cumplimiento de su más crucial objetivo, que es la extracción de conocimiento de los datos, entre los que se incluyen métodos científicos, estadísticos, análisis de datos y modelos de inteligencia artificial. Sus aplicaciones más comunes son el modelado predictivo, el reconocimiento de patrones, la detección de anomalías, la clasificación, la categorización y el análisis de sentimientos; así como el desarrollo de tecnologías como motores de recomendación, sistemas de personalización y herramientas de inteligencia artificial.
 
-Dentro del sector deportivo, el análisis de datos se ha convertido en una herramienta altamente poderosa y muy utilizada en la industria. La accesibilidad de los datos en forma de resultados generados en los distintos eventos deportivos en un año específico permite el análisis de actuaciones en cualquier número de eventos deportivos. A partir de los análisis de estos resultados se pueden observar cambios en el rendimiento de los deportistas a lo largo del tiempo y se pueden hacer predicciones de rendimiento futuro utilizando modelos matemáticos. 
+Dentro del sector deportivo, el análisis de datos se ha convertido en una herramienta poderosa. La accesibilidad de los datos en forma de resultados generados en los distintos eventos deportivos en un año específico permite el análisis de actuaciones en cualquier competencia. A partir de los análisis de estos resultados se pueden observar cambios en el rendimiento de los deportistas a lo largo del tiempo y se pueden hacer predicciones de rendimiento futuro utilizando modelos matemáticos y computacionales.  
 
-\section{Ciencia de datos en importantes eventos deportivos}
+Entre sus múltiples aplicaciones en el sector del deporte se destacan la predicción de la tabla de medallas en importantes competencias, la predicción de los resultados de varios eventos por equipos y de eventos individuales en modalidades como el atletismo.
 
-Varios autores han dedicado parte de su trabajo a estudiar y pronosticar los posibles resultados de cada país en importantes eventos como los Juegos Olímpicos y el Campeonato Mundial de Atletismo.
+\section{Predicción de tabla de medallas}
 
-Unos de los primeros investigadores en abordar este tema son Kuper y Sterken, que proporcionan una metodología para la obtención de los pronósticos de medallas y la participación en los Juegos Olímpicos tanto de Invierno \cite{kuper2001olympic} como de Verano \cite{kuperolympicgerard}, presentando resultados separados para eventos antes y después de la Segunda Guerra Mundial. Su enfoque principal es el impacto de los determinantes económicos, geográficos y demográficos de la participación y el éxito olímpico. Su método consiste en estimar primero la participación y luego modelar el rendimiento olímpico en términos de reparto de medallas de oro, plata y bronce, condicionado a la participación; teniendo en cuanta además variables para representar si es o no el país anfitrión, el ingreso per cápita y la clasificación de algunos países según sus sistemas legales.
+Varios autores han dedicado parte de su trabajo a estudiar y pronosticar los posibles resultados de cada país en importantes eventos, como pueden ser los Juegos Olímpicos, los Campeonatos Mundiales de Atletismo, entre otros.
 
-\cite{johnson2004tale} también en su búsqueda por determinar las influencias estructurales de la participación y el éxito de un país en los Juegos Olímpicos, llegan a la existencia de una ventaja de participación significativa y medible para las naciones más grandes y de mayores ingresos, aunque los ingresos son más importantes en el invierno y la población es más importante en el verano. Entre las naciones participantes, las naciones de altos ingresos siempre se desempeñan muy bien en el recuento de medallas, aunque los efectos son más pronunciados en el verano debido a la diferencia en el grupo de participantes. Curiosamente, las naciones pequeñas superan a sus competidores más grandes en los Juegos de Invierno, mientras que lo contrario es definitivamente cierto en los Juegos de Verano. 
+Unos de los primeros investigadores en abordar este tema fueron Kuper y Sterken en el año 2001, que proporcionaron una metodología para la obtención de los pronósticos de medallas y la participación en los Juegos Olímpicos tanto de Invierno \cite{kuper2001olympic} como de Verano \cite{kuperolympicgerard}, presentando resultados separados para eventos antes y después de la Segunda Guerra Mundial. Su enfoque principal es el impacto de los determinantes económicos, geográficos y demográficos de la participación y el éxito olímpico. Su método consiste en estimar primero la participación y luego modelar el rendimiento olímpico en términos de reparto de medallas de oro, plata y bronce, este último, condicionado a la participación. Además, agregaron nuevas variables para representar si es o no el país anfitrión, el ingreso per cápita y la clasificación de algunos países según sus sistemas legales.
 
-Como se demostró en los artículos anteriores, las características demográficas y económicas brindan un poder predictivo importante para determinar el éxito de un país en los Juegos Olímpicos. \cite{bernard2004wins} y \cite{pfau2006predicting} amplían dicha investigación haciendo uso de métodos de la economía y la econometría, con el fin de demostrar el poder de un modelo econométrico simple. \cite{bernard2004wins} hacen uso de una función de producción Cobb-Douglas para representar a la población y al ingreso nacional en la producción de talento olímpico (la cantidad de atletas que se presentan en la competencia) por país y de una función logarítmica para la traducción de este talento relativo en la cantidad de medallas ganadas. \cite{pfau2006predicting} se basa en el estudio anterior y lo extiende añadiendo variables propuestas por otros autores mencionados anteriormente, llegando a construir un modelo más completo. 
+Asimismo, Johnson y Ali en el 2004 \cite{johnson2004tale} en su búsqueda por determinar las influencias estructurales de la participación y el éxito de un país en los Juegos Olímpicos, llegaron a la existencia de una ventaja significativa y medible para las naciones más grandes y de mayores ingresos. Entre las naciones participantes, las naciones de altos ingresos siempre se desempeñan muy bien en el recuento de medallas, aunque los efectos son más pronunciados en el verano debido a la diferencia en la cantidad de participantes. Curiosamente, las naciones pequeñas superan a sus competidores más grandes en los Juegos de Invierno, mientras que lo contrario es definitivamente cierto en los Juegos de Verano. 
 
-En \cite{schlembach2020forecasting}, se ataca dicho problema desde una perspectiva más moderna haciendo uso de machine learning para aumentar significativamente la precisión del pronóstico de medallas olímpicas. Su modelo consiste en un Random Forest de dos etapas, superando el método de pronóstico naïve más tradicional para tres Juegos Olímpicos anteriores celebrados entre 2008 y 2016 por primera vez.
+Como se demostró en los artículos anteriores, las características demográficas y económicas brindan un poder predictivo importante para determinar el éxito de un país en los Juegos Olímpicos. Bernard y Busse en el 2004 \cite{bernard2004wins} y Pfau en el 2006 \cite{pfau2006predicting}, ampliaron dicha investigación haciendo uso de métodos de la economía y la econometría, con el fin de demostrar el poder de un modelo econométrico simple. Bernard y Busse hacen uso de una función de producción Cobb-Douglas para representar a la población y al ingreso nacional en la producción de talento olímpico (la cantidad de atletas que se presentan en la competencia) por país, y de una función logarítmica para la traducción de este talento relativo en la cantidad de medallas ganadas. Pfau se basó en el estudio anterior y lo extendió añadiendo variables propuestas por otros autores mencionados anteriormente, llegando a construir un modelo más completo.
 
-\section{Ciencia de datos en el atletismo}
+Schlembach y col. en el 2020 \cite{schlembach2020forecasting} atacaron dicho problema desde una perspectiva más moderna haciendo uso de aprendizaje automático para aumentar significativamente la precisión del pronóstico de medallas olímpicas. Su modelo consiste en un Random Forest de dos etapas que según, los experimentos realizados por los autores, supera por primera vez el método de pronóstico naïve más tradicional para tres Juegos Olímpicos celebrados entre 2008 y 2016. Este estudio no es el único en aplicar este enfoque, Jia y col. también utilizan modelos de regresión para ajustar la lista de medallas: el modelo GBR, el modelo de regresión polinomial y Random Forest. Coinciden también, luego de haber entrenado y evaluado los tres modelos, en que Random Forest es el que mejor se ajusta y obtiene las predicciones más cercanas a la realidad.
 
-Durante la preparación y entrenamiento de los atletas en disciplinas como el atletismo, es frecuente que los entrenadores se interesen por predecir su rendimiento. Con este fin, numerosos científicos han desarrollado modelos matemáticos, estadísticos y de inteligencia artificial que logran describir el efecto de varios factores en el rendimiento de los atletas, logrando predecir incluso resultados futuros. 
+El seguimiento del progreso y las tendencias en algunos deportes permite predecir la dirección en la que se dirige cada disciplina. Hay investigaciones que no solo se han dedicado al pronóstico de las tablas de medallas, sino que han tratado de ir un poco más allá y modelar a equipos o deportistas en específico para predecir futuros resultados que puedan obtener en enfrentamientos o competencias. De esta forma no solo se puede conocer la cantidad de medallas que obtiene un país, sino además el lugar más probable que ocupe cada uno de sus deportistas en el podio final. La mayoría de estos trabajos se han bifurcado en dos vertientes, los que se centran en el estudio de los parámetros que más valor atribuyen a la modelación de los equipos y los que se centran en los parámetros de los deportistas individuales. 
 
-\subsection{Modelos matemáticos}
+\section{Predicción de eventos por equipos}
 
-La modelación matemática es definida por \cite{anhalt2018mathematical} como el proceso de seleccionar y utilizar las matemáticas a través de una simplificación de la realidad que se expresa en un lenguaje simbólico tomando la forma de ecuaciones, algoritmos y relaciones gráficas. Algunos han utilizado modelos lineales para trazar y predecir el cambio del rendimiento de los atletas, mientras que otros han utilizado métodos de estimación de curvas múltiples basados en funciones inversas, sigmoides, cuadráticas, cúbicas, compuestas, logísticas, de crecimiento y exponenciales.
+En el fútbol, Piza \cite{piza2005futbol} presenta una metodología para la estimación de las probabilidades de clasificación de una selección en importantes competencias como el Mundial de Fútbol. Se trata de un modelo matemático del tipo simulación de Monte-Carlo, a través del cual se realizan millones de simulaciones de los posibles resultados de los juegos pendientes en un torneo de fútbol (siguiendo ciertas leyes de probabilidad), en el cual solamente un número limitado de equipos puede obtener la clasificación a la siguiente etapa de la competencia. El modelo toma en consideración los principales factores que pueden influir en los resultados en este contexto, tales como por ejemplo la historia reciente, el potencial actual de los equipos y las circunstancias particulares que rodean los partidos pendientes.
 
-\cite{hill1925physiological} y \cite{keller1973theory} se centran en los corredores de distancia y desarrollan modelos basados en el metabolismo para proporcionar una explicación fisiológica de la relación tiempo-distancia y predecir el rendimiento récord. En el caso de \cite{hill1925physiological} se trata de responder a la interrogante “¿Qué tan rápido puede correr un atleta una cierta distancia?”, teniendo en cuenta el factor fatiga. Mientras que, por otro lado, \cite{keller1973theory} ajusta la curva teórica a cuatro registros observados: la fuerza máxima que puede ejercer un corredor, la fuerza resistiva que se opone al corredor, la velocidad a la que el metabolismo del oxígeno suministra energía y la cantidad inicial de energía almacenada en el cuerpo del corredor al comienzo de la carrera. 
+Vázquez y col. \cite{vazquez2014combining} generan un modelo de predicción de resultados de partidos de baseball mediante la comparación de estadísticas a lo largo del tiempo. Los autores toman en consideración que los equipos que actúan de manera similar se desempeñarán de manera similar en situaciones concretas con una alta probabilidad. De la misma manera, asumen que los juegos deben desarrollarse de manera similar si los equipos que juegan son similares. La propuesta que presentan combina series temporales y algoritmos de agrupamiento para generar un modelo que aprende de la evolución de equipos y partidos e intenta predecir resultados finales.
 
-En \cite{grubb1998models} para determinar las fortalezas de un atleta y evaluar el efecto del entrenamiento, proponen una forma paramétrica que caracteriza el cambio del rendimiento de los corredores con la distancia. Ellos definen el rendimiento como la velocidad promedio para cada distancia, lo cual permite hacer análisis que ayuden a predecir rendimientos futuros.
+Thabtah y col. \cite{thabtah2019nba} proponen un marco de aprendizaje automático para predecir los resultados de los juegos en la NBA con el objetivo de descubrir el conjunto de características influyentes que afectan estos resultados. Para identificar si los métodos de aprendizaje automático son aplicables en el pronóstico del resultado de un juego de la NBA utilizando datos históricos (juegos anteriores), y cuáles son los factores significativos que afectan el resultado de estos, se seleccionan varios métodos de aprendizaje automático que utilizan diferentes esquemas de aprendizaje para derivar los modelos, incluidos Naïve Bayes, redes neuronales artificiales y Decision Tree. 
 
-\cite{heazlewood2006prediction} hace uso de ecuaciones matemáticas que dependen de los tiempos obtenidos y las distancias reales logrados por los atletas para la predicción de eventos atléticos de 100 m, 400 m, salto de longitud y salto de altura masculino y femenino. Para investigar las hipótesis de ajuste y predicción del modelo, once modelos de regresión se aplicaron individualmente a cada uno de los eventos atléticos y de natación. La ecuación de regresión que produjo el mejor ajuste para cada evento, es decir, produjo el coeficiente de determinación más alto (R2), fue finalmente la escogida. Tanto para los 100 m masculinos como para el salto largo femenino escogieron una función inversa, para los 100 m femeninos y el salto largo masculino una función cúbica, una función sigmoide para los 400 m tanto masculinos como femeninos y para el caso del salto alto, dieron iguales resultados la función exponencial, de crecimiento, compuesta y logística.  
+\section{Predicción de eventos individuales}
 
-Los límites naturales están siendo desafiados, principalmente en los eventos de larga distancia, por lo que hay varios artículos que se centran en responder ciertas interrogantes como “¿Se están acercando los atletas al límite del rendimiento humano?” y “¿Las mujeres atletas superarán a los hombres?”. Uno de ellos es \cite{kumarforecasting}, donde para obtener respuestas a esas consultas analiza datos relacionados con la carrera y la natación de hombres y mujeres con la ayuda de dos modelos matemáticos bien conocidos: el modelo logístico y el modelo Gompertz.
+Ho{\l}ub y col. \cite{holub2021predicting} analizan los resultados de los finalistas, ganadores y últimos participantes en las finales de mujeres y hombres de natación y crean un modelo predictivo matemático. Como parte de su trabajo analizaron los resultados obtenidos a lo largo de toda la historia de los Juegos Olímpicos y luego aplicaron en la producción de un modelo matemático predictivo, basado en análisis de regresión lineal univariado, para calcular los tiempos estimados de los ganadores, finalistas y últimos participantes en las finales olímpicas de Tokio 2021.
 
-\cite{joyner2008endurance} realiza una revisión de los factores que interactúan en los deportes de resistencia y su utilidad como predictores del rendimiento de elite. Los factores que marcan como principales son: el consumo máximo de oxígeno (VO2, máx.), el llamado "umbral de lactato" y la eficiencia (el costo de oxígeno para generar una velocidad de carrera dada o una producción de potencia de ciclismo); que parecen desempeñar un papel clave en el rendimiento de resistencia.
+Kholkine y col. \cite{kholkine2021learn} utilizan datos fácilmente accesibles sobre ciclismo de ruta de los últimos 20 años y la técnica de aprendizaje automático Learn-to-Rank (LtR) para predecir los 10 principales contendientes para carreras de ciclismo de ruta de 1 día. Esto lo lograron asignando un peso de relevancia al lugar final en las primeras 10 posiciones y evaluando el rendimiento de este enfoque en las ediciones de 2018, 2019 y 2021 de seis carreras clásicas de primavera de 1 día. Al final compararon el resultado con una predicción masiva de fanáticos. Las métricas que utilizaron fueron la ganancia acumulativa descontada normalizada (NDCG) y la cantidad de 10 conjeturas principales correctas. Finalmente, descubrieron que su modelo, en promedio, tiene un rendimiento ligeramente superior en ambas métricas que la predicción de fanáticos masivos. También analizaron qué variables de su modelo tienen más influencia en la predicción de cada carrera.
 
-\cite{westera2011phenomenology} presenta un Modelo Predictor Personal para las carreras de velocidad, el cual solo utiliza dos marcas personales de un atleta para la calibración y permite luego predecir las marcas personales hipotéticas de un atleta para cualquier otra distancia.
+Por otra parte, Liu y col. \cite{liu2022construction} estudiaron el evento de patinaje de velocidad completo femenino, un sistema de competencia complejo y desafiante para hacer predicciones precisas sobre su desempeño. Usaron seis algoritmos de ML diferentes: Support Vector Machine (SVM), Logistic Regression (LR), Random Forest (RF), K-Nearest Neighbor (KNN), Naive Bayes (NB) y Neural Network (NN) para construir un Modelo de Carrera de 5.000 m. Luego, el rendimiento y la funcionalidad de estos modelos se examinaron y compararon explícitamente. El resultado del modelo concluía si el atleta podía participar en la competencia de 5000 o ganar una medalla. En la evaluación y comparación del modelo de carrera y del modelo de medalla, SVM obtuvo la clasificación más equilibrada a través de una comparación exhaustiva de precisión.
 
-En \cite{galvanmathematical} se proponen diferentes modelos matemáticos para algunos eventos del atletismo. Se crearon cinco ecuaciones a partir de los datos reales: una ecuación polinómica de quinto orden para el maratón masculino, una ecuación polinomial de quinto orden para el maratón femenino, una ecuación polinomial de segundo orden para la marcha masculina de 20 km, una ecuación de potencia para la marcha de 20 km de mujeres, y una ecuación polinomial de segundo orden para la marcha de 50 km de hombres.
+\section{Predicción de eventos del atletismo}
+
+Durante la preparación y entrenamiento de los atletas en deportes como el atletismo, es frecuente que los entrenadores se interesen por predecir su rendimiento. Con este fin, numerosos científicos han desarrollado modelos matemáticos, estadísticos y de inteligencia artificial que logran describir el efecto de varios factores en el rendimiento de los atletas, logrando predecir incluso resultados futuros. 
+
+\subsection{Modelos matemáticos y estadísticos}
+
+La modelación matemática es definida por Anhalt y col. \cite{anhalt2018mathematical} como el proceso de seleccionar y utilizar las matemáticas a través de una simplificación de la realidad que se expresa en un lenguaje simbólico tomando la forma de ecuaciones, algoritmos y relaciones gráficas. Algunos han utilizado modelos lineales para trazar y predecir el cambio del rendimiento de los atletas, mientras que otros han utilizado métodos de estimación de curvas múltiples basados en funciones inversas, sigmoides, cuadráticas, cúbicas, compuestas, logísticas, de crecimiento y exponenciales.
+
+Las investigaciones de Hill en 1925 \cite{hill1925physiological} y Keller en 1973 \cite{keller1973theory} se centraron en los corredores de distancia y desarrollaron modelos basados en el metabolismo para proporcionar una explicación fisiológica de la relación tiempo-distancia y predecir el rendimiento récord. En el caso de Hill se trata de responder a la interrogante “¿Qué tan rápido puede correr un atleta una cierta distancia?”, teniendo en cuenta el factor fatiga. Mientras que, por otro lado, Keller ajusta la curva teórica a cuatro registros observados: la fuerza máxima que puede ejercer un corredor, la fuerza resistiva que se opone al corredor, la velocidad a la que el metabolismo del oxígeno suministra energía y la cantidad inicial de energía almacenada en el cuerpo del corredor al comienzo de la carrera. 
+
+Grubb en 1998 \cite{grubb1998models} para determinar las fortalezas de un atleta y evaluar el efecto del entrenamiento, propuso una forma paramétrica que caracteriza el cambio del rendimiento de los corredores con la distancia. La definición que planteó como rendimiento fue la velocidad promedio para cada distancia, lo cual permite hacer análisis que ayuden a predecir rendimientos futuros.
+
+Heazlewood en 2006 \cite{heazlewood2006prediction} hizo uso de ecuaciones matemáticas que dependen de los tiempos obtenidos y las distancias reales logrados por los atletas para la predicción de los eventos de 100 m, 400 m, salto de longitud y salto de altura masculino y femenino. Para investigar las hipótesis de ajuste y predicción del modelo, once modelos de regresión se aplicaron individualmente a cada uno de los eventos atléticos y de natación. Por último, la ecuación de regresión que produjo el mejor ajuste para cada evento fue la escogida, para lo cual se apoyaron en el cálculo del coeficiente de determinación (R2). Tanto para los 100 m masculinos como para el salto largo femenino escogieron una función inversa, para los 100 m femeninos y el salto largo masculino una función cúbica, una función sigmoide para los 400 m tanto masculinos como femeninos y para el caso del salto alto, dieron iguales resultados la función exponencial, de crecimiento, compuesta y logística.  
+
+En el 2008, Joyner y Coyle \cite{joyner2008endurance} realizan una revisión de los factores que interactúan en los deportes de resistencia y su utilidad como predictores del rendimiento de elite. Los factores que marcan como principales son: el consumo máximo de oxígeno (VO2, máx.), el llamado "umbral de lactato" y la eficiencia (el costo de oxígeno para generar una velocidad de carrera dada o una producción de potencia de ciclismo); que parecen desempeñar un papel clave en el rendimiento de resistencia.
+
+Westera \cite{westera2011phenomenology} presentó un Modelo Predictor Personal para las carreras de velocidad, el cual solo utiliza dos marcas personales de un atleta para la calibración y permite luego predecir las marcas personales hipotéticas de un atleta para cualquier otra distancia.
+
+Galván y col \cite{galvanmathematical} propusieron diferentes modelos matemáticos para algunos eventos del atletismo. Se crearon cinco ecuaciones a partir de los datos reales: una ecuación polinómica de quinto orden para el maratón masculino, una ecuación polinomial de quinto orden para el maratón femenino, una ecuación polinomial de segundo orden para la marcha masculina de 20 km, una ecuación de potencia para la marcha de 20 km de mujeres, y una ecuación polinomial de segundo orden para la marcha de 50 km de hombres.
 
 \subsection{Modelos basados en datos}
 
-La relación entre un modelo matemático y la realidad tiene fuertes implicaciones en cuanto a la percepción del mundo y las interpretaciones de los resultados por los científicos, por lo que pronosticar el éxito depende de seleccionar un método apropiado y altamente preciso. Es por esto que varios autores han incursionado en otras vías de estudio para la predicción: modelos basados en datos. Con los modelos basados en datos no es necesario determinar de antemano la expresión matemática que va a representar el modelo de predicción de rendimiento único de un atleta; sino, por el contrario, se trata de hacer uso de herramientas que aprendan por si solas la mejor vía para representar los datos.
+La relación entre un modelo matemático y la realidad tiene fuertes implicaciones en cuanto a la percepción del mundo y las interpretaciones de los resultados por los científicos, por lo que pronosticar el éxito depende de seleccionar un método apropiado y altamente preciso. Es por esto que varios autores han incursionado en otras vías de estudio para la predicción: los modelos basados en datos. Con los modelos basados en datos no es necesario determinar de antemano la expresión matemática que va a representar el modelo de predicción de rendimiento único de un atleta; sino, por el contrario, se trata de hacer uso de herramientas que aprendan por si solas la mejor vía para representar los datos.
 
-\cite{godsey2012brian} no se enfoca en la predicción de las marcas futuras de un atleta en específico, sino en predecir la calificación máxima esperada en un evento determinado y tanto la probabilidad de que se supere una marca específica como el número esperado de dichas actuaciones en un período de tiempo determinado. Proponen un algoritmo sencillo y basado en modelos para asignar puntuaciones a actuaciones deportivas, las cuales se basan en el número esperado de atletas que se desempeñan mejor que una marca dada dentro de un año calendario. Para esto, de forma general, estiman una distribución logarítmica normal para cada evento deportivo $k$ usando una lista de las mejores $n_k$ marcas de ese evento y asumen que los logaritmos naturales de los rendimientos de cada evento se distribuyen normalmente.
+Godsey \cite{godsey2012brian} no se enfocó en la predicción de las marcas futuras de un atleta en específico, sino en predecir la calificación máxima esperada en un evento determinado y tanto la probabilidad de que se supere una marca específica como el número esperado de dichas actuaciones en un período de tiempo determinado. Propusieron un algoritmo sencillo y basado en modelos para asignar puntuaciones a actuaciones deportivas, las cuales se basan en el número esperado de atletas que se desempeñan mejor que una marca dada dentro de un año calendario. Para esto, de forma general, estiman una distribución logarítmica normal para cada evento deportivo $k$ usando una lista de las mejores $n_k$ marcas de ese evento y asumen que los logaritmos naturales de los rendimientos de cada evento se distribuyen normalmente.
 
-Las herramientas de Inteligencia Artificial también han proporcionado muy buenos resultados a la hora de predecir rendimientos futuros. \cite{blythe2016prediction} tratan de proponer un modelo que explique simultáneamente la fisiología individual y el rendimiento colectivo de los corredores. Su enfoque basa las predicciones en Local Matrix Completion (LMC), una técnica de aprendizaje automático que postula la existencia de un pequeño número de variables explicativas que describen el rendimiento de los corredores individuales. En su estudio, descubren que un resumen de tres números para cada individuo explica el rendimiento en toda la gama de distancias, desde los 100 m hasta el maratón. El resumen de tres números se relaciona con: la resistencia de un corredor, el equilibrio relativo entre velocidad y resistencia, y la especialización en distancias medias.
+Las herramientas de Inteligencia Artificial también han proporcionado muy buenos resultados a la hora de predecir rendimientos futuros. Blythe y Király en el año 2016 \cite{blythe2016prediction} trataron de proponer un modelo que explicara simultáneamente la fisiología individual y el rendimiento colectivo de los corredores. Su enfoque basa las predicciones en Local Matrix Completion (LMC), una técnica de aprendizaje automático que postula la existencia de un pequeño número de variables explicativas que describen el rendimiento de los corredores individuales. En su estudio, descubrieron que un resumen de tres números para cada individuo explica el rendimiento en toda la gama de distancias, desde los 100 m hasta el maratón. El resumen de tres números se relaciona con: la resistencia de un corredor, el equilibrio relativo entre velocidad y resistencia, y la especialización en distancias medias.
 
-\cite{zhou2022sports} propone un método para predecir con precisión el rendimiento deportivo basado en Redes Neuronales Profundas, el cual se basa en una relación funcional entre el rendimiento deportivo de los atletas y sus indicadores de entrenamiento: índices de forma corporal, función, calidad básica y calidad especial.
+Zhou en el 2022 \cite{zhou2022sports} propuso un método para predecir con precisión el rendimiento deportivo basado en Redes Neuronales Profundas, el cual se basa en una relación funcional entre el rendimiento deportivo de los atletas y sus indicadores de entrenamiento: índices de forma corporal, función, calidad básica y calidad especial.
+
+Son numerosos los trabajos enfocados en la predicción de los resultados que obtendrán los atletas en disímiles y futuros eventos deportivos. Algunos proponen modelos sencillos para alguna modalidad en específico del atletismo, estudiando solamente marcas de los deportistas y buscando funciones matemáticas que mejor puedan describir el comportamiento que siguen. Existen otros que llevan a cabo un estudio exhaustivo, trabajando con variables relacionadas con la psicología y fisiología de los atletas, con el objetivo de llegar a obtener predicciones más exactas. Otros, necesitan de la intervención de expertos para poder ajustar estos modelos, sin llegar a aprovechar la información que puede suministrar los resultados finales de competencias pasadas.
+
+Aun cuando el abanico de técnicas que se han aplicado es muy amplio, no ha disminuido el interés de los investigadores en seguir proponiendo nuevos enfoques para solucionar este problema. La presente investigación es uno de ellos y se propone como objetivo principal presentar una nueva metodología para la construcción de un sistema de predicción de las diferentes modalidades del atletismo. Se quiere verificar que tan bueno puede ser un modelo que cuente solo con marcas obtenidas por los atletas en el pasado y sea capaz de ajustar sus valores a partir de resultados de competencias ya celebradas. Se propone un nuevo enfoque con respecto a los estudiados anteriormente, que será explicado detalladamente en los próximos capítulos.
