--- a/document/MainMatter/Introduction.tex
+++ b/document/MainMatter/Introduction.tex
@@ -1,2 +1,53 @@
 \chapter*{Introducción}\label{chapter:introduction}
 \addcontentsline{toc}{chapter}{Introducción}
+
+El pronóstico de eventos futuros es uno de los trabajos más complicados y desafiantes con los que se ha enfrentado el ser humano a lo largo de su historia. La predicción es una tarea compleja en cualquiera de las áreas del conocimiento en que se aplica y son numerosos los estudios que se han llevado a cabo. Algunos de estos se han dedicado a la predicción de eventos meteorológicos \cite{watson2022improved}\cite{powers2007numerical}, de los futuros cambios en el estado financiero de un país o de una empresa \cite{morris2010measuring}\cite{gilardoni2017recurrent}, de los resultados que se obtendrán en eventos deportivos \cite{vaz2012forecasting}\cite{constantinou2012pi}, del aumento o decremento del valor de las tan revolucionarias criptomonedas \cite{bohte2019comparing}, entre muchos otros más. 
+
+Los sistemas de predicción constituyen uno de los más complejos dentro del campo del análisis de datos. El conocimiento aportado por una buena predicción siempre aporta una ventaja a aquel que sabe hacer uso de él, lo que da mucho valor a las herramientas que pueden predecir con un gran grado de certeza y seguridad qué va a ocurrir en el futuro. Sin embargo, definir una técnica o modelo para realizar estos pronósticos con un rendimiento eficiente y con resultados cercanos a la realidad en diferentes ambientes es una actividad desafiante y compleja, debido a que ninguno es preciso en todos los escenarios.
+
+La práctica de deportes es una parte fundamental en la vida de la mayoría de las personas, lo que hace que el mundo de las estadísticas deportivas esté tan en auge. Para los amantes de un determinado deporte puede resultar muy curioso observar estadísticas acerca de su atleta y equipo favorito o de una competencia en especial. Lo mismo sucede para las personas que realizan apuestas deportivas, conocer los resultados más probables antes de que se lleven a cabo los correspondientes eventos competitivos les puede proveer de un gran beneficio económico. 
+
+Por otra parte, la predicción del rendimiento deportivo puede ayudar a las escuelas, los equipos y las instituciones de deporte a desarrollar métodos de entrenamiento científicos que reflejen las tendencias cambiantes en el rendimiento de los deportistas. Por lo tanto, los atletas y entrenadores podrán utilizar estos resultados como base para reformar la educación y el entrenamiento físico. 
+
+Evaluaciones y análisis de campeonatos mundiales, Juegos Olímpicos y competencias regionales han delineado la dirección que ha asumido el deporte de nuestros días. De manera particular, el atletismo ha sido el foco de varias investigaciones científicas \cite{grubb1998models}\cite{westera2011phenomenology}\cite{godsey2012brian} con el objetivo de desarrollar modelos computacionales que sean capaces de describir el efecto de varios factores que puedan influir en el rendimiento e incluso puedan predecir futuros resultados.
+
+Algunos científicos proyectan la evolución de las distintas marcas en función de las estadísticas de los últimos 100 años y establecen un patrón que tiene en cuenta factores fisiológicos y límites biomecánicos \cite{kumarforecasting}\cite{mishra2013mathematical}. Pero, cuando entra en juego el comportamiento humano como factor fundamental, a veces los datos no son suficientes para predecir con garantías la capacidad del ser humano para superarse. Ejemplo de esto es lo ocurrido en el año 2008 cuando el jamaicano Usain Bolt, además de pulverizar tres récords del mundo en unas Olimpiadas, puso de patas arriba todos los modelos matemáticos de predicción elaborados hasta esa fecha. En uno de los gráficos con las predicciones de la prueba de 100 metros lisos hasta el año 2100, se describía una curva de evolución descendente que venía cumpliéndose de forma escrupulosa hasta el momento. El atleta jamaicano se adelantó a la predicción en 20 años y alcanzó la marca de 9.69 segundos que los matemáticos habían previsto para el año 2030 \cite{wired}.
+
+\subsection*{Motivación}
+
+Existen diferentes plataformas que se dedican a investigar y pronosticar los posibles resultados de cada país en importantes eventos como los Juegos Olímpicos y los Campeonatos Mundiales de Atletismo. Algunas de estas plataformas son Gracenote Sports Virtual Medal Table \cite{gracenote}, que utiliza un algoritmo para clasificar a los atletas y equipos en cada evento olímpico en función de los resultados de competencias recientes, y BEST Sports \cite{bestsports}, que publica predicciones de resultados deportivos generados por expertos que utilizan modelos estadísticos y algoritmos de aprendizaje automático. Ambas plataformas solo hacen predicciones de la tabla final de medallas, sin llegar a presentar un podio con los atletas que tengan mayor probabilidad de ocupar las primeras posiciones.  
+
+Por otro lado, muchas han sido las investigaciones encaminadas a la predicción de futuros resultados obtenidos por atletas, pero solo se enfocan en el estudio de algunas disciplinas en específico y no proponen un modelo que logre abarcar todas las modalidades del atletismo \cite{girardi2022performance}. Además, muchos de esos estudios no solo trabajan con las marcas personales de los atletas, sino que también con otras métricas como velocidades máximas alcanzadas en el caso de las carreras de velocidad y variables relacionadas con el metabolismo y con las características fisiológicas de los deportistas \cite{zhou2022sports}\cite{mulligan2018minimal}.
+
+Un sistema de predicción de las diferentes modalidades del atletismo ayudaría en la selección de la delegación deportiva que representará a cada país con el fin de lograr las mejores posiciones en los podios. Además, se lograrían constantes mejoras de los deportistas a través de la adaptación de nuevos hábitos de entrenamiento o incrementando el rendimiento de los equipos al utilizar estrategias más complejas, realistas y personalizadas.  A la vez, permitiría comprender los límites reales de la capacidad humana para establecer objetivos nuevos y sensatos que los atletas deberán alcanzar, para así proporcionar una comprensión más coherente de lo que sugieren las actuaciones del pasado sobre las actuaciones del futuro.
+
+\subsection*{Antecedentes}
+
+En el grupo de investigación de Inteligencia Artificial de la Facultad de Matemática y Computación de la Universidad de la Habana se han realizado trabajos para obtener pronósticos de diferentes deportes dentro de los Juegos Olímpicos celebrados en Tokio 2020 \cite{tokio2020}. En el caso de la predicción de las distintas modalidades del atletismo, los resultados obtenidos no fueron muy certeros. De las 43 disciplinas pronosticadas, hubo 70 medallistas pronosticados correctamente de 129 y, de ellos, 23 posiciones exactas.  
+
+\subsection*{Problemática} 
+
+Los modelos de predicción del atletismo existentes en la actualidad solo se enfocan en una cuestión en específico, sin llegar a ser del todo abarcadores. Algunos solo hacen predicciones de la tabla final de medallas en las competencias, mientras que otros se enfocan en predecir las futuras marcas que obtendrán los atletas en un determinado certamen. Ninguna de estas dos vías logra, dentro de una competencia, construir un ranking final para cada disciplina con los atletas que tengan la mayor probabilidad de ocupar las primeras posiciones.
+
+En vistas a la materialización de esta investigación, se propone como hipótesis que la implementación de un sistema de predicción basado en simulaciones y contando solo para cada atleta con resultados obtenidos en ediciones de competencias anteriores, es capaz de obtener pronósticos, lo más cercanos posible, de los resultados de las diferentes competiciones de atletismo.
+
+El mecanismo principal que se presenta para la predicción es la realización de una serie de simulaciones de cada disciplina, donde se crea una función para cada atleta capaz de aprender de registros históricos para la generación de nuevos resultados que son altamente probable que se obtengan. Por último, se realiza un estudio estadístico para brindar una propuesta de ranking final.
+
+La simulación permite cambiar casi cualquier entrada al proceso de pronóstico y, casi en tiempo real, ver qué impacto tendría en los resultados; y en caso de que se presente alguna mejora, modificar según sea necesario. Los resultados obtenidos serán comparados con el Campeonato Mundial de Atletismo 2022 celebrado en Oregón con el objetivo de evaluar el rendimiento y precisión del sistema.
+
+\subsection*{Objetivos}
+
+El \textbf{objetivo general} consiste en proponer una metodología que permita predecir la posición que ocuparán los atletas en el ranking de cada una de las modalidades que conformen una competencia de atletismo.
+
+Para alcanzar el cumplimiento del objetivo general se plantean una serie de \textbf{objetivos específicos}:
+
+\begin{enumerate}
+\item Estudiar diferentes modelos de predicción para algunos eventos deportivos presentes en la literatura, en especial los del atletismo, así como sus enfoques para resolver la problemática presentada.
+\item Proponer un método que permita modelar la función de resultados de cada atleta, que aprenda de marcas obtenidas en competencias anteriores y sea capaz de generar nuevas.
+\item Diseñar e implementar un prototipo de sistema de predicción que construya el ranking más probable para cada modalidad del atletismo.
+\item Evaluar experimentalmente la eficacia de la metodología propuesta, tomando en cuenta los resultados obtenidos por el sistema implementado.
+\end{enumerate}
+
+\subsection*{Organización de la tesis}
+
+El resto del documento se encuentra estructurado en tres capítulos que proporcionan una explicación detallada de las diferentes fases por las que transitó el desarrollo del presente trabajo. En el capítulo \ref{chapter:state-of-the-art} ``Estado del Arte'' se realiza un estudio de las diferentes investigaciones realizadas y modelos propuestos hasta la fecha que más se acercan a la problemática presentada. En el capítulo \ref{chapter:proposal} ``Propuesta'' se describe de forma general la concepción y el diseño de la solución y se explica detalladamente la metodología propuesta para obtener las predicciones. En el capítulo \ref{chapter:implementation} ``Detalles de Implementación y Experimentos'' se detallan los aspectos técnicos seguidos en la implementación del prototipo, así como las herramientas utilizadas, y se hace un análisis de los resultados obtenidos en el proceso de experimentación. Para finalizar, se exponen las conclusiones de la investigación, seguido de algunas recomendaciones para investigaciones y trabajos futuros. Al final del documento se presentan algunos anexos y todas las referencias bibliográficas de los trabajos consultados.
